Issue #2981132 by rahul01, dipakmdhrm, Neetika K: Comment:Add image: The content below Align is cut

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -666,7 +666,7 @@ a.frmore{
 /* -------------- Form Elements  ------------- */
 
 fieldset { background: #ffffff; border: 1px solid #cccccc; margin-top: 10px; margin-bottom: 32px;
-padding: 0 0 10px; position: relative; top: 12px; /* Offsets the negative margin of legends */
+padding: 0 0 10px; top: 12px; /* Offsets the negative margin of legends */
 -khtml-border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; }
 
 .fieldset-wrapper { margin-top: 25px; }
@@ -687,8 +687,7 @@ padding: 0 0 10px; position: relative; top: 12px; /* Offsets the negative margin
 
 fieldset.collapsed { background: transparent; -khtml-border-radius: 0; -moz-border-radius: 0;  -webkit-border-radius: 0; border-radius: 0; }
 
-fieldset legend { background: #dbdbdb; border: 1px solid #ccc; border-bottom: none; display: block; height: 2em;
-left: -1px; line-height: 2; padding: 0; position: absolute; text-indent: 10px; text-shadow: 0 1px 0 #fff; top: -12px; width: 100%;
+fieldset legend { background: #dbdbdb; border: 1px solid #ccc; border-bottom: none; display: block; height: 2em; line-height: 2; padding: 0; position: static; text-indent: 10px; text-shadow: 0 1px 0 #fff; width: 100%;
 -khtml-border-radius-topleft: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; border-top-left-radius: 4px;
 -khtml-border-radius-topright: 4px; -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; border-top-right-radius: 4px; }
 
